fixed whitespace color

--- a/src/layouts/ViewNav/styles.module.css
+++ b/src/layouts/ViewNav/styles.module.css
@@ -9,6 +9,7 @@
 }
 
 .whitespace {
+  background-color: white;
   position: absolute;
   width: 100%;
   height: 100vh;
